# Toys

.github/workflows/: todo-ci.yml
.squad/identity/: now.md  wisdom.md
todo-cli/: .gitignore  README.md  RUNNING.md  pyproject.toml  todo_ui.py
todo-cli/tests/: test_todo.py
todo-cli/todo/: __init__.py  cli.py  models.py  queries.py  storage.py
